// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getVersion run correctly: run correctly 1`] = `

import { getVersion } from '../../macro.js';
      const version = getVersion();
      const versionAlt = getVersion(false);
      const versionObject = getVersion(true);

      ↓ ↓ ↓ ↓ ↓ ↓

const version = (_temp = '11.14.2-rc.123+a.2.56');
const versionAlt = (_temp2 = '11.14.2-rc.123+a.2.56');
const versionObject = (_temp3 = {
  build: ['a', '2', '56'],
  loose: false,
  major: 11,
  minor: 14,
  patch: 2,
  prerelease: ['rc', 123],
  raw: '11.14.2-rc.123+a.2.56',
  version: '11.14.2-rc.123',
});


`;

exports[`loadJson load path from json file: load path from json file 1`] = `

import { loadJson } from '../macro.js';
        const loadedFile = loadJson('./__fixtures__/three.other.json', 'deeply.nested.0.file.for');
        const otherFile = loadJson('./__fixtures__/three.other.json', 'deeply.nested[0].file.for');
        const noValue = loadJson('./__fixtures__/three.other.json', 'i.dont.exist');

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFile = (_temp = 'you');
const otherFile = (_temp2 = 'you');
const noValue = (_temp3 = undefined);


`;

exports[`loadJson pseudo-dynamic values: pseudo-dynamic values 1`] = `

import { loadJson } from '../macro.js';
      const fileName = './__fixtures__/one.test' + '.json';
      const loadedFile = loadJson(fileName);

      ↓ ↓ ↓ ↓ ↓ ↓

const fileName = './__fixtures__/one.test' + '.json';
const loadedFile = (_temp = {
  simple: 'json',
});


`;

exports[`loadJson run correctly: run correctly 1`] = `

import { loadJson } from '../macro.js';

      const loadedFile = loadJson('./__fixtures__/one.test.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFile = (_temp = {
  simple: 'json',
});


`;

exports[`loadJson use property: use property 1`] = `

import { loadJson } from '../macro.js';

      const loadedFile = loadJson('./__fixtures__/one.test.json').simple;

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFile = (_temp = {
  simple: 'json',
}).simple;


`;

exports[`loadJsonFiles run correctly: run correctly 1`] = `

import { loadJsonFiles } from '../macro.js';
      const loadedFiles = loadJsonFiles('__fixtures__/*.test.json', '**/four.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFiles = (_temp = [
  {
    simple: 'json',
  },
  {
    hello: 'friend',
  },
  ['an', 'array', 'of', 'strings', 5, 'nope'],
]);


`;

exports[`loadPackageJson get key: get key 1`] = `

import { loadPackageJson } from '../../macro.js';
      const name = loadPackageJson('name');
      const notReal = loadPackageJson('not real');

      ↓ ↓ ↓ ↓ ↓ ↓

const name = (_temp = 'awesome');
const notReal = (_temp2 = null);


`;

exports[`loadPackageJson run correctly: run correctly 1`] = `

import { loadPackageJson } from '../../macro.js';
      const packageJson = loadPackageJson();

      ↓ ↓ ↓ ↓ ↓ ↓

const packageJson = (_temp = {
  name: 'awesome',
  version: '11.14.2-rc.123+a.2.56',
});


`;

exports[`loadTsConfigJson get different name: get different name 1`] = `

import { loadTsConfigJson } from '../../macro.js';
      const name = loadTsConfigJson('tsconfig.awesome.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const name = (_temp = {
  compilerOptions: {
    paths: {},
    allowJs: true,
  },
  extends: './tsconfig.json',
});


`;

exports[`loadTsConfigJson run correctly: run correctly 1`] = `

import { loadTsConfigJson } from '../../macro.js';
      const packageJson = loadTsConfigJson();

      ↓ ↓ ↓ ↓ ↓ ↓

const packageJson = (_temp = {
  compilerOptions: {
    paths: {},
  },
});


`;
